 + All missions: Add skip where it doesn't hurt
 + All missions: Clarify mine timers
 + All missions: Improve displaying behaviour of mission panel
 + All missions: Change team colors
 + Side missions: Remove or shorten intro sequences
 + Side missions: Generous ready time to give more time to read the mission panel
 + Getting to the device: Put device part in a real crate, improve some dialogues
 * Spacetrip: Fix various bugs and logic flaws in the initial mission
 * A frozen adventure: Fix bazooka and excess freezers (>6) not retained over checkpoints
 * A frozen adventure: Fix and improve poorly written messages
 * Getting to the device: Add real crate and correct message for collecting device part
 * Getting to the device: Remove checkpoints. There was a good chance for these missions to become unwinnable
 * Searching in the dust: Remove checkpoints. See above.
 * Searching in the dust: Fix Hog Solo dropping straight down when roping near smuggler
 * Searching in the dust: Fix incorrect messages after collecting device part
 * Precise flying: Fix victory not being recognized, also wait for flames to settle before losing
 * Hard Flying: Fix ending in a Lua error
 * The First Stop: Fix stats screen showing teams twice
 * Fruit planet: Fix “Precise shooting” disappearing directly after completing “Bad timing”
 * Fruit planet: Fix “Getting to the device” not visible when landing on fruit planet with first main mission completed only
 * Killing The Specialists: Fix killing hog with Deagle gave you chance to use another weapon in same turn
 * Fix weird behaviour when walking right before the first animation in most missions
 * Fix a coupe of texts being untranslatable
 * Fix a variety of minor logic flaws in the story
 * Fix typos
 * All missions: Fix incorrect crate types

Missions:
 + New scenario: Teamwork 2
 + New scenario: Big Armory
 + New training: Basic Flying Saucer Training